--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
