--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qiphon/vue-print",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/vue-print.cjs.js",
   "module": "dist/vue-print.esm.js",
@@ -42,5 +42,6 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "rollup": "^3.29.5"
-  }
+  },
+  "prettier": "@qiphon/prettier-config"
 }
