--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qiphon/vue-print",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "dist/vue-print.cjs.js",
   "module": "dist/vue-print.esm.js",
@@ -12,7 +12,8 @@
     "docs:dev": "dumi dev",
     "docs:build": "dumi build",
     "clean": "rimraf dist",
-    "build": "npm run clean && rollup -c",
+    "build:dev": "npm run clean && cross-env NODE_ENV=development rollup -c",
+    "build": "npm run clean && cross-env NODE_ENV=production rollup -c",
     "prepublishOnly": "npm run build",
     "release": "npm publish"
   },
@@ -38,6 +39,7 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "cross-env": "^7.0.3",
     "dumi": "^2.4.21",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
